// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Slab DefaultSlab renders 1`] = `
<Fragment>
  <h2
    id="default-slab"
  >
    Default slab
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab"
    >
      <p>
        Do you want to sign up for the slab mailing list?
      </p>
      <form
        action="#"
        data-validate={true}
        noValidate={true}
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="validation-email-2"
          >
            Email
          </label>
          <div
            className="input-group"
          >
            <span
              className="input-group-addon"
            >
              <i
                className="material-icons"
              >
                email
              </i>
            </span>
            <input
              className="form-control"
              id="validation-email-2"
              placeholder="bob.corlsan@example.com"
              required={true}
              type="email"
            />
          </div>
          <div
            className="help-block"
            data-error="Wrong!"
            data-success="Right!"
          >
            This one might be a little tricky
          </div>
        </div>
        <button
          className="btn btn-executive"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabArrow renders 1`] = `
<Fragment>
  <h2
    id="slab-arrow"
  >
    Slab arrow
  </h2>
  <p>
    <Property
      value=".slab-arrow"
    />
     inherits the color from the slab it is appended to.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-arrow"
    >
      <p>
        This slab has some connection to the content above.
      </p>
    </div>
    <div
      className="slab slab-primary slab-arrow"
    >
      <p>
        This slab has some connection to the content above.
      </p>
    </div>
    <div
      className="slab slab-secondary slab-arrow"
    >
      <p>
        This slab has some connection to the content above.
      </p>
    </div>
    <div
      className="slab slab-plain slab-arrow"
    >
      <p>
        This slab has some connection to the content above.
      </p>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabColors renders 1`] = `
<Fragment>
  <h2
    id="slab-colors"
  >
    Slab colors
  </h2>
  <p>
    We offer three additional slab types; 
    <Property
      value=".slab-primary"
    />
    , 
    <Property
      value=".slab-secondary"
    />
     and 
    <Property
      value=".slab-plain"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-primary"
    >
      <h4>
        Here is some text and then a striped item list
      </h4>
      <small>
        Some text with a small listing of items underneath.
      </small>
      <ul
        className="list item-list"
      >
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </div>
    <div
      className="slab slab-secondary"
    >
      <h4>
        Here is some text and then a striped item list
      </h4>
      <small>
        Some text with a small listing of items underneath.
      </small>
      <ul
        className="list item-list"
      >
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </div>
    <div
      className="slab slab-plain"
    >
      <h4>
        Here is some text and then a striped item list
      </h4>
      <small>
        Some text with a small listing of items underneath.
      </small>
      <ul
        className="list item-list"
      >
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabElevated renders 1`] = `
<Fragment>
  <h2
    id="elevated-slab"
  >
    Elevated slab
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-elevated"
    >
      Look ma, im elevated!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabMuted renders 1`] = `
<Fragment>
  <h2
    id="slab-muted"
  >
    Slab muted
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-muted"
    >
      <h4>
        This text will be gray.
      </h4>
      

      <span>
        And this text will be gray.
      </span>
      

      Even this text will be gray!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabSizes renders 1`] = `
<Fragment>
  <h2
    id="slab-sizes"
  >
    Slab sizes
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-sm"
    >
      This is very snug.
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-lg"
    >
      This is so spacious I can hardly believe it!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabWell renders 1`] = `
<Fragment>
  <h2
    id="slab-well"
  >
    Slab well
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-well"
    >
      Look ma, im in a well!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Slabs are container components, therefore it works with whatever you want to put in it.
  </p>
  <DefaultSlab />
  <SlabColors />
  <SlabElevated />
  <SlabWell />
  <SlabArrow />
  <SlabMuted />
  <SlabSizes />
</DocContainer>
`;
